Fixing overflow

--- a/public/style/animeSenpai.css
+++ b/public/style/animeSenpai.css
@@ -67,7 +67,8 @@ src: url("fonts/Supermassive Black Hole.ttf");
 .collage {
   display: flex;
   height: 70vh;
-  overflow-y: auto;
+  overflow-y: hidden;
+  overflow-x:auto;
   flex-flow: column;
   flex-wrap: wrap;
   align-items: flex-start;
